force-app/main/default/objects/Pipeline_Column_Setting__c/Pipeline_Column_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to define the column settings for Pipeline Manager</description>
    <label>Pipeline Column Setting</label>
</CustomObject>