force-app/main/default/objects/Pipeline_Column_Setting__c/fields/Alignment__c.field-meta.xml
<CustomField>
    <fullName>Alignment__c</fullName>
    <defaultValue>&quot;left&quot;</defaultValue>
    <description>Defines the column alignment</description>
    <label>Alignment</label>
    <length>10</length>
    <type>Text</type>
</CustomField>