force-app/main/default/objects/Pipeline_Column_Setting__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Defines the Label to Display</description>
    <label>Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>