force-app/main/default/objects/Pipeline_Column_Setting__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <description>Column Width</description>
    <label>Width</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>